# tt-timetracker

./: Cargo.toml  LICENSE  README.md  todo.md
scripts/: tt-name-i3-ws.sh  tt-start-stop.sh
src/: collector.rs  configfile.rs  error.rs  lib.rs  log_parser.rs  main.rs  subcommands.rs  utils.rs
src/subcommands/: add.rs  edit.rs  interactive.rs  is_active.rs  list.rs  report.rs  resume.rs  watch_i3.rs
src/tests/: mod.rs  test_add.rs  test_log_parser.rs
